this should fix that pesky zoom in on mobile for the inputs

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,11 +119,11 @@ textarea:focus {
 
 input {
   height: 2.75em;
-  font-size: 0.86rem;
+  font-size: 1rem;
 }
 
 textarea {
-  font-size: 0.875rem;
+  font-size: 1rem;
   height: 100%;
   margin: 0;
   padding-top: 0.431rem;
@@ -265,6 +265,10 @@ figure img {
 figcaption {
   text-align: center;
 }
+
+/* p a {
+  color: black;
+} */
 
 .projects-header {
   text-align: start;
